Fix in dark mode

--- a/app/assets/stylesheets/_dark.scss
+++ b/app/assets/stylesheets/_dark.scss
@@ -40,6 +40,7 @@ html[data-dark='true'] {
   .border-left,
   .details-horiz > p:not(:last-of-type),
   .details-horiz > div:not(:last-of-type),
+  .details-horiz > .details-horiz__col,
   tr {
     border-color: $darkless;
   }
